--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "sky-tonight-api",
     "version": "0.0.1",
-    "description": "",
+    "description": "Get list of visible planetary bodies in your sky",
     "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
